<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/enterprise_photo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@android:color/holo_orange_dark"
        android:scaleType="centerCrop"
        tools:src="@drawable/resize_vielawall" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="#5b2815"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawableLeft="@drawable/resized_local"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:paddingRight="5dp"
        android:singleLine="false"
        android:text="@string/address"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/open_hours"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawableLeft="@drawable/resized_clock"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:paddingRight="5dp"
        android:singleLine="false"
        android:text="@string/open_hours"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/cellphone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawableLeft="@drawable/resized_phone"
        android:drawablePadding="5dp"
        android:gravity="center_vertical|center_horizontal"
        android:singleLine="true"
        android:text="@string/cellphone"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:drawableLeft="@drawable/resized_info"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:singleLine="false"
        android:text="@string/description"
        android:textSize="14sp" />

</LinearLayout>